--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 />
 
     <title>Vyoobam Tech</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     
 <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+
 
   </head>
   <body>
